// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a banner with a primary 'learning' action when the type is 'notice' 1`] = `
<div>
  <div
    class="banner notice"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Bruce
        </p>
      </div>
      <div
        class="bannerAction"
      >
        <button
          class="button small learning tertiary"
          type="button"
        >
          <span
            style="opacity: 1; transform: none;"
          >
            <span
              class="base extraBold small base"
            >
              smash me
            </span>
          </span>
        </button>
      </div>
    </div>
    <button
      aria-label="Close this notification"
      class="closeButton"
    >
      <span
        class="Z6OfUI2sH34- TphtDHcwxDc-"
        style="transform: none;"
      >
        <svg
          class="Z6OfUI2sH34- TphtDHcwxDc-"
          data-testid="cross"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="ItL-7gRcsBo-"
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders a banner with a primary action 1`] = `
<div>
  <div
    class="banner success"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Bruce
        </p>
      </div>
      <div
        class="bannerAction"
      >
        <button
          class="button small work tertiary"
          type="button"
        >
          <span
            style="opacity: 1; transform: none;"
          >
            <span
              class="base extraBold small base"
            >
              smash me
            </span>
          </span>
        </button>
      </div>
    </div>
    <button
      aria-label="Close this notification"
      class="closeButton"
    >
      <span
        class="Z6OfUI2sH34- TphtDHcwxDc-"
        style="transform: none;"
      >
        <svg
          class="Z6OfUI2sH34- TphtDHcwxDc-"
          data-testid="cross"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="HavlDN2ZD-k-"
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders a notice banner 1`] = `
<div>
  <div
    class="banner notice"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Notice me
        </p>
      </div>
    </div>
    <button
      aria-label="Close this notification"
      class="closeButton"
    >
      <span
        class="Z6OfUI2sH34- TphtDHcwxDc-"
        style="transform: none;"
      >
        <svg
          class="Z6OfUI2sH34- TphtDHcwxDc-"
          data-testid="cross"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="ItL-7gRcsBo-"
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders a success banner 1`] = `
<div>
  <div
    class="banner success"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Success
        </p>
      </div>
    </div>
    <button
      aria-label="Close this notification"
      class="closeButton"
    >
      <span
        class="Z6OfUI2sH34- TphtDHcwxDc-"
        style="transform: none;"
      >
        <svg
          class="Z6OfUI2sH34- TphtDHcwxDc-"
          data-testid="cross"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="HavlDN2ZD-k-"
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders a warning banner 1`] = `
<div>
  <div
    class="banner warning"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Warn
        </p>
      </div>
    </div>
    <button
      aria-label="Close this notification"
      class="closeButton"
    >
      <span
        class="Z6OfUI2sH34- TphtDHcwxDc-"
        style="transform: none;"
      >
        <svg
          class="Z6OfUI2sH34- TphtDHcwxDc-"
          data-testid="cross"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="aQIlKXSkyDM-"
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
